[gd_scene load_steps=18 format=3 uid="uid://cure683tqavtj"]

[ext_resource type="Script" uid="uid://hhpp11jkideh" path="res://src/main_game.gd" id="1_l5ukw"]
[ext_resource type="PackedScene" uid="uid://bga73xu7rebk0" path="res://src/mobs/mob.tscn" id="2_4srsv"]
[ext_resource type="PackedScene" uid="uid://bsr8v470f5xby" path="res://src/mobs/player.tscn" id="3_mf81u"]
[ext_resource type="Theme" uid="uid://dtx6t2233sqom" path="res://art/theme.tres" id="4_02kkc"]
[ext_resource type="Texture2D" uid="uid://iwsjc3m0bnwh" path="res://art/dev_512_gr_032x.jpg" id="4_4srsv"]
[ext_resource type="Script" uid="uid://b1hudbs6h08c7" path="res://src/score_label.gd" id="5_aomqu"]
[ext_resource type="AudioStream" uid="uid://ccafimpvi7m7e" path="res://art/sounds/jump.wav" id="6_krmtw"]
[ext_resource type="AudioStream" uid="uid://lnoooyhpkqw2" path="res://art/sounds/loose.wav" id="7_jgkyn"]
[ext_resource type="AudioStream" uid="uid://b7ow127ovb3e8" path="res://art/sounds/score.wav" id="8_qpaub"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5igx4"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_mxp2p"]
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mf81u"]
albedo_texture = ExtResource("4_4srsv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_itnjd"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_in6y8"]
material = SubResource("StandardMaterial3D_itnjd")

[sub_resource type="Curve3D" id="Curve3D_yfq80"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -31.977, 0.139159, -31.5654, 0, 0, 0, 0, 0, 0, 31.7615, 0.0773869, -31.2213, 0, 0, 0, 0, 0, 0, 32.1209, 0.397857, 31.5546, 0, 0, 0, 0, 0, 0, -32.6584, 0.0887403, 31.029, 0, 0, 0, 0, 0, 0, -32.428, 0.139159, -13.4407),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_l5ukw"]
properties/0/path = NodePath("UserInterface/ScoreLabel:score")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_02kkc"]
size = Vector3(85.6388, 3.31958, 87.6656)

[node name="MainGame" type="Node"]
script = ExtResource("1_l5ukw")
mob_scene = ExtResource("2_4srsv")
player_scene = ExtResource("3_mf81u")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_5igx4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_mxp2p")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_mf81u")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.479779, 0.877389, 0, -0.877389, 0.479779, 0, 8.14942, 0)
shadow_enabled = true

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 19)
projection = 1
size = 19.0

[node name="cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5106, 0, -13.1298)
mesh = SubResource("CylinderMesh_in6y8")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.4894, 0, -13.1298)
mesh = SubResource("CylinderMesh_in6y8")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.4894, 0, 12.8702)
mesh = SubResource("CylinderMesh_in6y8")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5106, 0, 12.8702)
mesh = SubResource("CylinderMesh_in6y8")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_yfq80")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.00539841, 0.000969117, -0.999981, -8.73115e-11, 0.999996, 0.00096913, 0.999985, 5.23185e-06, -0.00539839, -31.977, 0.139159, -31.5654)

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 21.0
offset_top = 22.0
offset_right = 82.0
offset_bottom = 45.0
theme = ExtResource("4_02kkc")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_aomqu")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.501961)

[node name="Label" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -11.0
offset_right = 76.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to retry."

[node name="JumpSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.9493, 9.06548, 0)
stream = ExtResource("6_krmtw")
volume_db = 15.0

[node name="LooseSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.8364, 0, 0)
stream = ExtResource("7_jgkyn")
volume_db = 15.0

[node name="ScoreSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.9204, 9.68218, 0.632601)
stream = ExtResource("8_qpaub")
volume_db = 15.0

[node name="SpawnLocations" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.41214, 0)

[node name="0" type="Node3D" parent="SpawnLocations" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.35286, 0)

[node name="1" type="Node3D" parent="SpawnLocations" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.70194, 0, 3.47537)

[node name="2" type="Node3D" parent="SpawnLocations" groups=["PlayerSpawnPoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3428, 0, -4.42232)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_l5ukw")

[node name="FallDetector" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="FallDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.514015, -4.27917, -0.473297)
shape = SubResource("BoxShape3D_02kkc")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="body_entered" from="FallDetector" to="." method="_on_fall_detector_body_entered"]
